# LEDSensorClock

./: README.md  db.json
firmware/: CMakeLists.txt  partitions.csv  sdkconfig  version.txt
firmware/main/: CMakeLists.txt  app.cpp  app.h  config.cpp  config.h  dht11task.cpp  dht11task.h  dht22task.cpp  dht22task.h  mhz19btask.cpp  mhz19btask.h  pinconfig.h
firmware/main/certs/: cacert.pem  make_certs.sh  prvtkey.pem
firmware/main/menus/: appbase_menu.h  calibration_menu.cpp  calibration_menu.h  drawing.cpp  drawing.h  game_of_life.cpp  game_of_life.h  gui_list_processor.cpp  menu3d.cpp  menu3d.h  menu_state.cpp  setting_menu.cpp  setting_menu.h  update_menu.cpp  virtual_key_board.cpp  virtual_key_board.h  wifi_menu.cpp  wifi_menu.cpp.bak  wifi_menu.h
firmware/web/ledclk/: package-lock.json  package.json
firmware/web/ledclk/src/app/: store.js
firmware/web/ledclk/src/features/calibration/: calibrationSlice.js
firmware/web/ledclk/src/features/counter/: Counter.js  Counter.module.css
firmware/web/ledclk/src/features/scan/: scanSlice.js
firmware/web/ledclk/src/features/setting/: settingSlice.js
firmware/web/ledclk/src/features/system/: sysinfo.js
firmware/web/ledclk/src/features/tz/: tzSlice.js
firmware/web/ledclk/src/webpages/: calibration.js  header.js  home.js  index.js  scan.js  scandetails.js  systeminfo.js
mockWebServer/: mock.py
